# libsystemd-qt

./: .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  CMakeLists.txt  CONTRIBUTORS  QtSystemd-export.h  QtSystemd.pc.cmake  QtSystemdConfig.cmake.in  QtSystemdConfigVersion.cmake.in  README.md  job.cpp  job.h  job_p.h  ldmanager.cpp  ldmanager.h  ldmanager_p.h  macros.h  manager.cpp  manager.h  manager_p.h  sdmanager.cpp  sdmanager.h  sdmanager_p.h  seat.cpp  seat.h  seat_p.h  unit.cpp  unit.h  unit_p.h
dbus/: CMakeLists.txt  automountinterface.cpp  automountinterface.h  deviceinterface.cpp  deviceinterface.h  generic-types.cpp  generic-types.h  hostname1interface.cpp  hostname1interface.h  jobinterface.cpp  jobinterface.h  ldmanagerinterface.cpp  ldmanagerinterface.h  locale1interface.cpp  locale1interface.h  login1interface.cpp  login1interface.h  managerinterface.cpp  managerinterface.h  mountinterface.cpp  mountinterface.h  pathinterface.cpp  pathinterface.h  seatinterface.cpp  seatinterface.h  serviceinterface.cpp  serviceinterface.h  sessioninterface.cpp  sessioninterface.h  snapshotinterface.cpp  snapshotinterface.h  socketinterface.cpp  socketinterface.h  swapinterface.cpp  swapinterface.h  targetinterface.cpp  targetinterface.h  timedate1interface.cpp  timedate1interface.h  timerinterface.cpp  (+5 more)
dbus/introspection/: org.freedesktop.login1.LDManager.xml  org.freedesktop.login1.Seat.xml  org.freedesktop.login1.User.xml  org.freedesktop.login1.xml  org.freedesktop.systemd1.Job.xml  org.freedesktop.systemd1.Manager.xml  org.freedesktop.systemd1.Mount.xml  org.freedesktop.systemd1.Path.xml  org.freedesktop.systemd1.Service.xml  org.freedesktop.systemd1.Socket.xml  org.freedesktop.systemd1.Swap.xml  org.freedesktop.systemd1.Timer.xml  org.freedesktop.systemd1.Unit.xml
qmlplugin/: CMakeLists.txt  qmldir  qtsystemdplugin.cpp  qtsystemdplugin.h  system.cpp  system.h
src/: CMakeLists.txt  QtSystemd-export.h  generic-types.cpp  generic-types.h  job.cpp  job.h  job_p.h  ldmanager.cpp  ldmanager.h  ldmanager_p.h  sdmanager.cpp  sdmanager.h  sdmanager_p.h  seat.cpp  seat.h  seat_p.h  session.cpp  session.h  session_p.h  unit.cpp  unit.h  unit_p.h  user.cpp  user.h  user_p.h
src/dbus/: CMakeLists.txt  org.freedesktop.DBus.Properties.xml  org.freedesktop.hostname1.xml  org.freedesktop.login1.LDManager.xml  org.freedesktop.login1.Seat.xml  org.freedesktop.login1.Session.xml  org.freedesktop.login1.User.xml  org.freedesktop.systemd1.Automount.xml  org.freedesktop.systemd1.Device.xml  org.freedesktop.systemd1.Job.xml  org.freedesktop.systemd1.Manager.xml  org.freedesktop.systemd1.Mount.xml  org.freedesktop.systemd1.Path.xml  org.freedesktop.systemd1.Scope.xml  org.freedesktop.systemd1.Service.xml  org.freedesktop.systemd1.Slice.xml  org.freedesktop.systemd1.Socket.xml  org.freedesktop.systemd1.Swap.xml  org.freedesktop.systemd1.Timer.xml  org.freedesktop.systemd1.Unit.xml
src/qmlplugin/: CMakeLists.txt  qtsystemdplugin.cpp
tests/: CMakeLists.txt  ldmanager-test.cpp  main.qml  manager-test.cpp  qsystemd.cpp  sdmanager-test.cpp
